Fixed UI issue: Flickering of navigation menu fixed.

--- a/jobboard/src/main/webapp/resources/css/JB.css
+++ b/jobboard/src/main/webapp/resources/css/JB.css
@@ -4310,7 +4310,7 @@ h2.option2 span {color: #FE9400;
 	display: block;
 	text-align: center;
 	position: relative;
-	margin-right: 17px;
+	margin-right: 15px;
 	padding: 4px 9px 4px 10px;
 	border: none;
 	height: 26px;
